Migrate to ViewPager2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">SettleExpenses</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_1_expenses">Expenses</string>
+    <string name="tab_2_contacts">Contacts</string>
 </resources>
