--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SettleExpenses</string>
     <string name="tab_1_expenses">Expenses</string>
     <string name="tab_2_contacts">Contacts</string>
+    <string name="empty_contacts">No contacts yet.\nStart by tapping \'+\'.</string>
 </resources>
