--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="tab_1_expenses">Expenses</string>
     <string name="tab_2_contacts">Contacts</string>
     <string name="empty_contacts">No contacts yet.\nStart by tapping \'+\'.</string>
+    <string name="first_name">First name</string>
+    <string name="add_new_contact">Add new contact</string>
+    <string name="last_name">Last name</string>
+    <string name="save">Save</string>
 </resources>
