--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="add_new_contact">Add new contact</string>
     <string name="last_name">Last name</string>
     <string name="save">Save</string>
+    <string name="action_search">Search contact</string>
 </resources>
