--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="expenses">Expenses</string>
     <string name="empty_expenses">So far no expense was made.\nCreate one by tapping \'+\'.</string>
     <string name="currency_dollar">$</string>
+    <string name="expense_name">Title of group</string>
+    <string name="add_new_expense">Add Expense</string>
+    <string name="add_expense_participants">Add expense participants</string>
+    <string name="add_new">Add new</string>
+    <string name="amount">Amount</string>
+    <string name="error_group_name">Group name must be filled</string>
+    <string name="error_price">Price must be non zero.</string>
+    <string name="error_pick_contacts">At least one contact has to be selected.</string>
 </resources>
